<resources>
    <string name="app_name">PracticeApp</string>
    <string name="Hello_world">hello world</string>
    <string name="Login">Login</string>
    <string name="enter">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="forgot">Forget Password?</string>
    <string name="sign">Sign In</string>
    <string name="welcome">Welcome to Homepage\n</string>
    <string name="signup">Sign up</string>
    <string name="name">Enter name</string>
    <string name="signin">Sign In</string>
    <string name="noacc">"Don't have an account? "</string>
    <string name="haveacc">Already have an account?</string>
    <string name="singapore">Singapore</string>
    <string name="camera">Camera</string>
    <string name="setting">Settings</string>
    <string name="calculator">CALCULATOR</string>
    <string name="enterno">Enter any number</string>
    <string name="enterno1">Enter any number</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="enternm">Enter your name</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display">View</string>
    <string name="color">RED</string>
    <string name="red">Red</string>
    <string name="blue">blue</string>
    <string name="back">Back</string>
</resources>