<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="200dp"
    android:orientation="vertical"


    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_margin="5sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/et1"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterno"/>

    <EditText
        android:id="@+id/et2"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterno1"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">
    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5sp"
        android:text="@string/add"/>

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5sp"
        android:text="@string/sub"/>

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5sp"
        android:text="@string/multi"/>

    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:text="@string/div"/>
    </LinearLayout>


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result1"
        android:layout_margin="20sp"
        android:textSize="30sp" />

</LinearLayout>