<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sign"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/enter"
            android:id="@+id/enemail"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:id="@+id/enpass"
                android:inputType="numberPassword"
                android:hint="@string/password"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/forgot"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noacc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/signup"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>
</LinearLayout>