<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/singapore"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/star1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1"
        android:layout_marginTop="-30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias=".9"/>

    <TextView
        android:id="@+id/text0"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        android:text="@string/singapore"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginTop="20sp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text0" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"

        android:layout_marginTop="40sp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"/>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barrier"
        app:constraint_referenced_ids="text1"
        app:barrierDirection="end">
    </androidx.constraintlayout.widget.Barrier>

<EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/edit1"
    android:layout_margin="10sp"
    app:layout_constraintTop_toBottomOf="@id/text0"
    app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toEndOf="@id/text1"
/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit2"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/edit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>